# fuzzy-helium-meme

./: .gitignore  .tool-versions  Brewfile  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  example.py  pyproject.toml  requirements.txt
.github/: pr-labeler.yml  release-drafter-config.yml
.github/workflows/: README.md  actions-entrypoint.yml  adhoc-conventional-commit.yml  adhoc-k8s-deploy.yml  adhoc-promote.yml  adhoc-shellcheck.yml  dry-build-and-deploy.yml  dry-build-and-push.yml  dry-draft-version.yml  dry-release-drafter.yml  dry-unit-tests.yml  dry-versions.yml
.github/workflows/src/: _common.py  initial_release.py  poetry_python.py  project_versions.py  promote.py  requirements.txt
aurora_client/: __init__.py  client.py  config.py  exceptions.py
docs/: report.md
helium/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
helium/helium/: app.py
helium/helium/crud/: contact.py
helium/helium/db/: README.md  __init__.py
helium/helium/models/: contact.py
helium/helium/routes/: contact.py
helium/helium/schemas/: contact.py
iac/: Makefile  README.md
iac/aws/bootstrap/: backend.tf  variables.tf
iac/aws/terraform/: locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
iac/aws/terraform/environments/dev/: main.tf  terraform.tfvars  variables.tf
iac/aws/terraform/modules/aurora/: data.tf  iam.tf  main.tf  monitoring.tf  outputs.tf  parameter-groups.tf  variables.tf
iac/aws/terraform/modules/eks/: README.md  data.tf  eks-addons.tf  eks.tf  iam.tf  locals.tf  main.tf  outputs.tf  security-groups.tf  variables.tf
iac/aws/terraform/modules/networking/: main.tf  outputs.tf  security-groups.tf  variables.tf
iac/aws/terraform/modules/security/: main.tf  outputs.tf
iac/local/: README.md
iac/local/terraform/: backend.tf  kind.tf  main.tf  outputs.tf  terraform.tfstate.backup  variables.tf
iac/local/terraform/echo /Users/philipdelorenzo/.kube/: kind-cluster-config.yaml
iac/scripts/: prereqs.sh
k8s/: install.sh
k8s/base/: config.yaml  deployment.yaml  kustomization.yaml  secrets.yaml  service.yaml
k8s/overlays/: helium-ingressroute.yaml  kustomization.yaml
k8s/prereqs/: namespace.yaml
scripts/: init.sh  prereqs.sh  python.txt
tests/: test_aurora_client.py
