[tool.poetry]
name = "helium"
version = "0.1.0"
description = "This is a small client with an Aurora database backend..."
authors = ["Philip De Lorenzo <philip.delorenzo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.117.1"
uvicorn = "^0.36.0"
sqlalchemy = "^2.0.43"
asyncpg = "^0.30.0"
greenlet = "^3.2.4"
pydantic = {extras = ["email"], version = "^2.11.9"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
